# simubrowser

./: .gitignore  .prettierrc.toml  README.md  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: common.rs  lib.rs
src/components/: AddressBar.tsx  Bookmark.tsx  BookmarkBar.tsx  Browser.tsx  NavigationBar.tsx  NewTabPage.tsx  TabBar.tsx  TabCardView.tsx  TabCounter.tsx  ThemeToggle.tsx  UserAvatar.tsx
src/contexts/: ThemeContext.tsx
