[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-app-events = "0.2.0"

[dependencies]
tauri = { version = "2", features = ["macos-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

http = "1"

gateway = "0.1.0"

rustls = { version = "0.23.15", default-features = false, features = ["ring"] }


[patch.crates-io]
gateway = { git = "ssh://git@github.com/genmeta/gateway.git", branch = "feat/stream_init" }
h3-shim = { git = "ssh://git@github.com/genmeta/gm-quic-traversal.git", branch = "feat/upstream" }
gm-quic = { git = "ssh://git@github.com/genmeta/gm-quic-traversal.git", branch = "feat/upstream" }
qinterface = { git = "ssh://git@github.com/genmeta/gm-quic-traversal.git", branch = "feat/upstream" }
qconnection = { git = "ssh://git@github.com/genmeta/gm-quic-traversal.git", branch = "feat/upstream" }
qtraversal = { git = "ssh://git@github.com/genmeta/gm-quic-traversal.git", branch = "feat/upstream" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
